修复律师端小程序bug

--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -69,7 +69,10 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.wechatpay-apiv3</groupId>
+            <artifactId>wechatpay-apache-httpclient</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
