--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -150,3 +150,23 @@ xss:
   excludes: /system/notice
   # 匹配链接
   urlPatterns: /system/*,/monitor/*,/tool/*
+
+# 配置 rocketmq
+rocketmq:
+  name-server: 127.0.0.1:9876
+  #生产者
+  producer:
+    #生产者组名，规定在一个应用里面必须唯一
+    group: group
+    #消息发送的超时时间 默认3000ms
+    send-message-timeout: 3000
+    #消息达到4096字节的时候，消息就会被压缩。默认 4096
+    compress-message-body-threshold: 4096
+    #最大的消息限制，默认为128K
+    max-message-size: 4194304
+    #同步消息发送失败重试次数
+    retry-times-when-send-failed: 3
+    #在内部发送失败时是否重试其他代理，这个参数在有多个broker时才生效
+    retry-next-server: true
+    #异步消息发送失败重试的次数
+    retry-times-when-send-async-failed: 3
